--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "id": "8xTi-tyFHGlx"
       },
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "id": "RIXUhlM1HGl7"
       },
@@ -79,12 +79,13 @@
         "DATA_CAST = 'single'\n",
         "RUN_SIMULATION = True\n",
         "\n",
-        "filename = 'volumeAdjusted.nii'"
+        "filename = 'volumeAdjusted.nii'\n",
+        "ELEM_LENGTH = 40"
       ],
       "metadata": {
         "id": "wuUJyL_4uebT"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -103,16 +104,18 @@
         "ct_vol                         = ct_img.get_fdata()\n",
         "dx_mm, dy_mm, dz_mm            = ct_img.header.get_zooms()  # 3d spacing in mm\n",
         "lateral_spacing, depth_spacing = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
+        "dz = 0.1e-3\n",
         "\n",
         "# extract slice\n",
         "slice_idx = ct_vol.shape[2] // 2\n",
         "ct_slice  = np.flipud(ct_vol[:, :, slice_idx]) # shape = (Nx, Ny)\n",
-        "Nx, Ny    = ct_slice.shape                     # Nx = lateral, Ny = spacing"
+        "Nx, Ny    = ct_slice.shape                     # Nx = lateral, Ny = spacing\n",
+        "needed_Nz = ELEM_LENGTH + 1"
       ],
       "metadata": {
         "id": "0BzYqHaqiSdm"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -133,7 +136,7 @@
       "metadata": {
         "id": "PTN_madDjP3J"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -150,9 +153,12 @@
       "source": [
         "# |<- PML ->|<------ computational domain ------>|<- PML ->|\n",
         "# |pml_size pts   (Nx - 2*pml_size) pts      pml_size pts|\n",
-        "pml_size_points     = Vector([10, 10])                         # [grid points]\n",
-        "grid_size_points    = Vector([Nx, Ny]) - 2 * pml_size_points\n",
-        "grid_spacing_meters = Vector([lateral_spacing, depth_spacing]) # grid spacing is given by ct resolution\n",
+        "pml_size_points     = Vector([10, 10, 0])                  # [grid points]\n",
+        "\n",
+        "grid_size_points    = Vector([Nx, Ny, needed_Nz]) - 2 * pml_size_points\n",
+        "grid_spacing_meters = Vector([lateral_spacing,\n",
+        "                              depth_spacing,\n",
+        "                              dz]) # grid spacing is given by ct resolution\n",
         "\n",
         "kgrid               = kWaveGrid(grid_size_points, grid_spacing_meters)\n",
         "\n",
@@ -167,9 +173,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e84f3564-695b-4047-bbfa-bcd53e05a65a"
+        "outputId": "076e5fb6-ebe6-400f-cd8d-3b305acf1639"
       },
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 21
         }
       ]
     },
@@ -208,7 +214,7 @@
       "metadata": {
         "id": "7n8Xj2cOuWpJ"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -222,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {
         "id": "l6ExjbPzHGmD"
       },
@@ -248,26 +254,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 27,
       "metadata": {
         "id": "d8d3FQfRHGmE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
         },
-        "outputId": "e47fbe31-ce8a-4ec2-9fea-0d754f983eef"
+        "outputId": "c5f0355d-a308-45bf-b035-722e9a374bcc"
       },
       "outputs": [
         {
           "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "index 2 is out of bounds for axis 0 with size 2",
+          "ename": "ValueError",
+          "evalue": "The defined transducer is too large or positioned outside the grid in the z-direction",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-8108690ac16c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mtransducer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mlateral_start_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth_start_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mtransducer\u001b[0m          \u001b[0;34m=\u001b[0m \u001b[0mkWaveTransducerSimple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mtransducer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/ktransducer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, kgrid, number_elements, element_width, element_length, element_spacing, position, radius)\u001b[0m\n\u001b[1;32m     63\u001b[0m         ) > self.stored_grid_size[1]:\n\u001b[1;32m     64\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The defined transducer is too large or positioned outside the grid in the y-direction\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m         \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melement_length\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstored_grid_size\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melement_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 0 with size 2"
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-47e8b4a696d8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m                        z_start_index]\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtransducer\u001b[0m          \u001b[0;34m=\u001b[0m \u001b[0mkWaveTransducerSimple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mtransducer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/ktransducer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, kgrid, number_elements, element_width, element_length, element_spacing, position, radius)\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melement_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstored_grid_size\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The defined transducer is too large or positioned outside the grid in the z-direction\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstored_grid_size\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The defined transducer is positioned outside the grid in the x-direction\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: The defined transducer is too large or positioned outside the grid in the z-direction"
           ]
         }
       ],
@@ -275,7 +281,7 @@
         "transducer                 = dotdict()\n",
         "transducer.number_elements = 64            # total number of transducer elements\n",
         "transducer.element_width   = 1             # width of each element [grid points]\n",
-        "transducer.element_length  = 40            # length of each element [grid points]\n",
+        "transducer.element_length  = ELEM_LENGTH   # length of each element [grid points]\n",
         "transducer.element_spacing = 0             # spacing (kerf  width) between the elements [grid points]\n",
         "transducer.radius          = float('inf')  # radius of curvature of the transducer [m]\n",
         "\n",
@@ -286,10 +292,13 @@
         ")\n",
         "\n",
         "# use this to position the transducer in the middle of the computational grid\n",
-        "lateral_start_index = np.round(grid_size_points.x/2 - transducer_width/2)\n",
+        "lateral_start_index = int(np.round(grid_size_points.x/2 - transducer_width/2))\n",
         "depth_start_index   = 1\n",
+        "z_start_index       = 1\n",
         "\n",
-        "transducer.position = [lateral_start_index, depth_start_index, 0]\n",
+        "transducer.position = [lateral_start_index,\n",
+        "                       depth_start_index,\n",
+        "                       z_start_index]\n",
         "\n",
         "transducer          = kWaveTransducerSimple(kgrid, **transducer)"
       ]
@@ -536,28 +545,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "id": "IWgq1K-AHGmS",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "outputId": "d7da3403-93a4-4f1d-81d9-d528a8757cdc"
+        "id": "IWgq1K-AHGmS"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'scan_lines' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-285b415077d4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscan_lines_fund\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgaussian_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscan_lines\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtone_burst_freq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mscan_lines_harm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgaussian_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscan_lines\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtone_burst_freq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'scan_lines' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "scan_lines_fund = gaussian_filter(scan_lines, 1/kgrid.dt, tone_burst_freq, 100)\n",
         "scan_lines_harm = gaussian_filter(scan_lines, 1/kgrid.dt, 2 * tone_burst_freq, 30)"
