--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 28,
       "metadata": {
         "id": "8xTi-tyFHGlx"
       },
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 29,
       "metadata": {
         "id": "RIXUhlM1HGl7"
       },
@@ -50,7 +50,7 @@
         "from kwave.kgrid import kWaveGrid\n",
         "from kwave.kmedium import kWaveMedium\n",
         "from kwave.kspaceFirstOrder2D import kspaceFirstOrder2D\n",
-        "# from kwave.kspaceFirstOrder3D import kspaceFirstOrder3D\n",
+        "from kwave.kspaceFirstOrder3D import kspaceFirstOrder3D\n",
         "from kwave.ktransducer import NotATransducer, kWaveTransducerSimple\n",
         "from kwave.options.simulation_execution_options import SimulationExecutionOptions\n",
         "from kwave.options.simulation_options import SimulationOptions\n",
@@ -79,13 +79,16 @@
         "DATA_CAST = 'single'\n",
         "RUN_SIMULATION = True\n",
         "\n",
+        "# CT file\n",
         "filename = 'volumeAdjusted.nii'\n",
-        "ELEM_LENGTH = 40"
+        "\n",
+        "# Transducer\n",
+        "ELEM_LENGTH = 1"
       ],
       "metadata": {
         "id": "wuUJyL_4uebT"
       },
-      "execution_count": 18,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -103,19 +106,22 @@
         "ct_img                         = nib.load(filename)\n",
         "ct_vol                         = ct_img.get_fdata()\n",
         "dx_mm, dy_mm, dz_mm            = ct_img.header.get_zooms()  # 3d spacing in mm\n",
-        "lateral_spacing, depth_spacing = dx_mm/1000.0, dy_mm/1000.0 # 2d spacing in m\n",
-        "dz = 0.1e-3\n",
+        "lateral_spacing, depth_spacing, dz = dx_mm/1000.0, dy_mm/1000.0, dz_mm/1000.0 # 2d spacing in m\n",
+        "# dz = 0.1e-3\n",
+        "\n",
+        "Nx, Ny, Nz = ct_vol.shape\n",
+        "slice_idx  = round(Nz // 2)\n",
         "\n",
         "# extract slice\n",
-        "slice_idx = ct_vol.shape[2] // 2\n",
-        "ct_slice  = np.flipud(ct_vol[:, :, slice_idx]) # shape = (Nx, Ny)\n",
-        "Nx, Ny    = ct_slice.shape                     # Nx = lateral, Ny = spacing\n",
-        "needed_Nz = ELEM_LENGTH + 1"
+        "# slice_idx = ct_vol.shape[2] // 2\n",
+        "# ct_slice  = np.flipud(ct_vol[:, :, slice_idx]) # shape = (Nx, Ny)\n",
+        "# Nx, Ny    = ct_slice.shape                     # Nx = lateral, Ny = spacing\n",
+        "# needed_Nz = ELEM_LENGTH + 1"
       ],
       "metadata": {
         "id": "0BzYqHaqiSdm"
       },
-      "execution_count": 19,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -136,7 +142,7 @@
       "metadata": {
         "id": "PTN_madDjP3J"
       },
-      "execution_count": 20,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -153,9 +159,9 @@
       "source": [
         "# |<- PML ->|<------ computational domain ------>|<- PML ->|\n",
         "# |pml_size pts   (Nx - 2*pml_size) pts      pml_size pts|\n",
-        "pml_size_points     = Vector([10, 10, 0])                  # [grid points]\n",
+        "pml_size_points     = Vector([10, 10, 10])                  # [grid points]\n",
         "\n",
-        "grid_size_points    = Vector([Nx, Ny, needed_Nz]) - 2 * pml_size_points\n",
+        "grid_size_points    = Vector([Nx, Ny, Nz]) - 2 * pml_size_points\n",
         "grid_spacing_meters = Vector([lateral_spacing,\n",
         "                              depth_spacing,\n",
         "                              dz]) # grid spacing is given by ct resolution\n",
@@ -173,21 +179,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "076e5fb6-ebe6-400f-cd8d-3b305acf1639"
+        "outputId": "45453786-d5b5-4595-ddf4-fd53ed2bcbae"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(Vector([[0.00000000e+00, 1.36972416e-07, 2.73944831e-07, ...,\n",
-              "          4.93922531e-04, 4.94059503e-04, 4.94196475e-04]]),\n",
-              " Vector(1.36972416e-07))"
+              "(Vector([[0.00000000e+00, 1.94805195e-08, 3.89610390e-08, ...,\n",
+              "          4.94162338e-04, 4.94181818e-04, 4.94201299e-04]]),\n",
+              " Vector(1.94805195e-08))"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 33
         }
       ]
     },
@@ -214,7 +220,7 @@
       "metadata": {
         "id": "7n8Xj2cOuWpJ"
       },
-      "execution_count": 22,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -228,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 35,
       "metadata": {
         "id": "l6ExjbPzHGmD"
       },
@@ -254,29 +260,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 36,
       "metadata": {
-        "id": "d8d3FQfRHGmE",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 315
-        },
-        "outputId": "c5f0355d-a308-45bf-b035-722e9a374bcc"
+        "id": "d8d3FQfRHGmE"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "The defined transducer is too large or positioned outside the grid in the z-direction",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-47e8b4a696d8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m                        z_start_index]\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtransducer\u001b[0m          \u001b[0;34m=\u001b[0m \u001b[0mkWaveTransducerSimple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mtransducer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/ktransducer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, kgrid, number_elements, element_width, element_length, element_spacing, position, radius)\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melement_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstored_grid_size\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The defined transducer is too large or positioned outside the grid in the z-direction\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstored_grid_size\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The defined transducer is positioned outside the grid in the x-direction\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The defined transducer is too large or positioned outside the grid in the z-direction"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "transducer                 = dotdict()\n",
         "transducer.number_elements = 64            # total number of transducer elements\n",
@@ -294,7 +282,7 @@
         "# use this to position the transducer in the middle of the computational grid\n",
         "lateral_start_index = int(np.round(grid_size_points.x/2 - transducer_width/2))\n",
         "depth_start_index   = 1\n",
-        "z_start_index       = 1\n",
+        "z_start_index       = slice_idx + 1\n",
         "\n",
         "transducer.position = [lateral_start_index,\n",
         "                       depth_start_index,\n",
@@ -314,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "eLrJHTKsHGmH"
       },
@@ -323,7 +311,7 @@
         "not_transducer                      = dotdict()\n",
         "not_transducer.sound_speed          = c0  # sound speed [m/s]\n",
         "not_transducer.focus_distance       = 30e-3  # focus distance [m]\n",
-        "# in 2D we don't need elevation_focus_distance!\n",
+        "not_transducer.elevation_focus_distance = 30e-3  # focus distance in the elevation plane [m]\n",
         "not_transducer.steering_angle       = 0  # steering angle [degrees]\n",
         "not_transducer.steering_angle_max   = 32  # steering angle [degrees]\n",
         "not_transducer.transmit_apodization = 'Hanning'\n",
@@ -361,7 +349,7 @@
       "metadata": {
         "id": "fzfCU0br7-hH"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -392,11 +380,30 @@
         "'''"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 157
+        },
         "cellView": "code",
-        "id": "XbDL2t278A_G"
+        "id": "XbDL2t278A_G",
+        "outputId": "2fc54d40-47d0-48b1-c4e8-25ee1fa23b4e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\n# Segment the bone structures on the CT slice and apply enhanced scattering properties to those regions\\n# 1. Segment the region of interest on the CT slice (e.g., bone) based on Hounsfield Units\\nhu_threshold = 300                        # HU threshold above which voxels are considered bone\\nbone_mask    = (ct_slice > hu_threshold) # boolean mask of the high-density region\\n\\n# 2. Generate scattering parameters for that region (reusing your clipping logic)\\nscattering_map = np.random.randn(*ct_slice.shape)             # random perturbation map\\nscattering_c0   = np.clip(                           # clamp sound speed values between 1400 and 1600 m/s\\n    c0 + 25 + 75 * scattering_map,\\n    1400,\\n    1600\\n)\\nscattering_rho0 = scattering_c0 / 1.5                    # density values proportional to sound speed\\n\\n# 3. Overwrite the CT-derived maps only where the mask is True\\nsound_speed_map[bone_mask] = scattering_c0[bone_mask]    # apply higher scattering speed in bone regions\\ndensity_map    [bone_mask] = scattering_rho0[bone_mask]   # apply corresponding density\\n\\n# 4. Update the medium with the modified maps\\nmedium.sound_speed = sound_speed_map.astype(np.float32)  # ensure correct dtype for simulation\\nmedium.density     = density_map.astype(np.float32)\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -409,11 +416,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "VnNDQcw8HGmM"
+        "id": "VnNDQcw8HGmM",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 367
+        },
+        "outputId": "8f426d5d-447e-4eab-c86d-8a2e572f4b36"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Computing scan line 0 of 33\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "BeartypeCallHintParamViolation",
+          "evalue": "Function kwave.kspaceFirstOrder2D.kspaceFirstOrder2D() parameter source=<kwave.ktransducer.NotATransducer object at 0x787661908690> violates type hint <class 'kwave.ksource.kSource'>, as <class \"kwave.ktransducer.NotATransducer\"> <kwave.ktransducer.NotATransducer object at 0x787661908690> not instance of <class \"kwave.ksource.kSource\">.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mBeartypeCallHintParamViolation\u001b[0m            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-40-e5b94214ed8b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;31m# RUN 2D K-WAVE SIMULATION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         sensor_data            = kspaceFirstOrder2D(\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0mmedium\u001b[0m             \u001b[0;34m=\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Medium is altered in-place in this function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mkgrid\u001b[0m              \u001b[0;34m=\u001b[0m \u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<@beartype(kwave.kspaceFirstOrder2D.kspaceFirstOrder2D) at 0x787661a70a40>\u001b[0m in \u001b[0;36mkspaceFirstOrder2D\u001b[0;34m(__beartype_object_595702976, __beartype_get_violation, __beartype_conf, __beartype_object_602732160, __beartype_object_132450070265408, __beartype_object_600842608, __beartype_object_602673904, __beartype_object_601466096, __beartype_check_meta, __beartype_func, *args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mBeartypeCallHintParamViolation\u001b[0m: Function kwave.kspaceFirstOrder2D.kspaceFirstOrder2D() parameter source=<kwave.ktransducer.NotATransducer object at 0x787661908690> violates type hint <class 'kwave.ksource.kSource'>, as <class \"kwave.ktransducer.NotATransducer\"> <kwave.ktransducer.NotATransducer object at 0x787661908690> not instance of <class \"kwave.ksource.kSource\">."
+          ]
+        }
+      ],
       "source": [
         "# define range of steering angles to test and preallocate the storage\n",
         "steering_angles   = np.arange(-32, 33, 2)\n",
@@ -441,7 +473,7 @@
         "        not_transducer.steering_angle = steering_angles[angle_index]\n",
         "\n",
         "        # RUN 2D K-WAVE SIMULATION\n",
-        "        sensor_data            = kspaceFirstOrder2D(\n",
+        "        sensor_data            = kspaceFirstOrder3D(\n",
         "            medium             = deepcopy(medium),  # Medium is altered in-place in this function\n",
         "            kgrid              = kgrid,\n",
         "            source             = not_transducer,\n",
